# xrd_atlas

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/cif/: ti_beta_bcc_im3m.cif
src/xrd_atlas/: __init__.py  app.py  batch.py  constants.py  experimental.py  exporters.py  gui.py  models.py  service.py  structure.py  utils.py  xrd.py
tests/: test_xrd_atlas.py
