[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xrd-atlas"
version = "0.1.0"
description = "Standalone XRD simulation and comparison tool for CIF files."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "D-sudoasd"},
]
keywords = [
  "xrd",
  "cif",
  "materials-science",
  "crystallography",
  "powder-diffraction",
  "excel",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=2.4.1",
  "scipy>=1.17.0",
  "gemmi>=0.7.3",
  "spglib>=2.7.0",
  "pymatgen>=2025.6.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
]

[project.scripts]
xrd-atlas = "xrd_atlas.batch:main"
xrd-atlas-peaks = "xrd_atlas.batch:main"
xrd-atlas-gui = "xrd_atlas.gui:main"

[project.urls]
Homepage = "https://github.com/D-sudoasd/xrd_atlas"
Repository = "https://github.com/D-sudoasd/xrd_atlas"
Issues = "https://github.com/D-sudoasd/xrd_atlas/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
